--- a/1-data-collection-I01.ipynb
+++ b/1-data-collection-I01.ipynb
@@ -65,11 +65,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "cB_ucVTyXTI3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con '/home/marcos/.pyenv/versions/3.8.8/bin/python' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: '/home/marcos/.pyenv/versions/3.8.8/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# standard library imports\n",
     "import csv\n",
@@ -85,8 +96,13 @@
     "import requests\n",
     "\n",
     "# customisations - ensure tables show all columns\n",
-    "pd.set_option(\"max_columns\", 100)"
+    "pd.set_option(\"display.max_columns\", 100)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3861,7 +3877,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.8.8 (default, Nov 17 2022, 12:27:32) \n[GCC 11.3.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de8ddb0168e59ce6def4d1e4b24e82a475ce71aed929c24a5c12c82ea5248f7e"
+   }
   }
  },
  "nbformat": 4,
